--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
 
 <div class="classic2">
 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(nostalji.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ностальгия</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(kvq99AnambY.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ягодная сказка</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(sinnabone.jpg)"></div><div class="description" align="center"><div class="coffeeName">Синнабон</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(nostalji.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ностальгия</div><div class="coffeeDescription">290 руб.</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(kvq99AnambY.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ягодная сказка</div><div class="coffeeDescription">290 руб.</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(sinnabone.jpg)"></div><div class="description" align="center"><div class="coffeeName">Синнабон</div><div class="coffeeDescription">290 руб.</div></div></div>
 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(8ff5f1cc4a5970e14611e6e1fbc2bf5a.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сочный ананас</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(8ff5f1cc4a5970e14611e6e1fbc2bf5a.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сочный ананас</div><div class="coffeeDescription">290 руб.</div></div></div>
 
  
 </div>
