--- a/cakes.html
+++ b/cakes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
-<body style="background-image: url(wallpaper2you_584602.png);">
+<body style="background-image: url(finca-182-_1.jpg);">
 
 
 
@@ -32,9 +32,9 @@
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(ponchik-s-malinovoj-nachinkoj-konditerskoj-rozovoj-glazuryu-1.jpg)"></div><div class="description" align="center"><div class="coffeeName">Пончик с малиной</div><div class="coffeeDescription"><div>110 руб.</div><div class="titata">Взрывной дуэт,,, Этот пончик станет настоящим хитом в компании чашечки кофе</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(kruassan-otpechennyj-s-vetchinoj-i-syrom-2-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Круассан с сыром и ветчиной</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(kruassan-otpechennyj-s-vetchinoj-i-syrom-2-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Торт Милка</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(kruassan-otpechennyj-s-vetchinoj-i-syrom-2-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Торт Радуга</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(kruassan-otpechennyj-s-vetchinoj-i-syrom-2-0.jpg)"></div><div class="description" align="center"><div class="coffeeName">Торт Сникерс</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(milka.jpg)"></div><div class="description" align="center"><div class="coffeeName">Торт Милка</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(gourmet-dessert-cake.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Торт Радуга</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(0e05eee7c695a9e381f08a03bce697a1-680x500.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Торт Сникерс</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(8aaecc8be2d02c99dc3c0104f6e.jpg)"></div><div class="description" align="center"><div class="coffeeName">Торт Бабл Гам</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(1645765741_1-vostorg-buzz-p-konvertiki-iz-lepeshki-s-nachinkoi-3.jpg)"></div><div class="description" align="center"><div class="coffeeName">Конвертики с брынзой и зеленью</div><div class="coffeeDescription"><p><br>180 руб.</p></div></div></div>
 
