--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <div class="classicLogo" align="center" id="avtor">Авторские напитки</div>
 
-<div class="classic2">
+<div class="classicAvt">
 
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(nostalji.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ностальгия</div><div class="coffeeDescription">290 руб.</div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(kvq99AnambY.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ягодная сказка</div><div class="coffeeDescription">290 руб.</div></div></div>
