--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
 <div id="b">
-    <div id="bimg"><img src="bestcoffee.jpg"></div>
+    <div id="bimg"><img src="image/bestcoffee.jpg"></div>
     <div id="bslogan">Тут типа чето душевно про кофe
         <br>................
         <br>................
@@ -61,7 +61,7 @@
 
 <div class="classicLogo" align="center" id="classicCof" >Классика</div>
 <div class="classic4" >
-        <div class="classicCard"><div class="imgCoffee" style="background-image: urlimages/(6313304092.jpg)"></div><div class="description" align="center"><div class="coffeeName">Двойной эспрессо</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Является идеальной основой для кофейных напитков</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/6313304092.jpg)"></div><div class="description" align="center"><div class="coffeeName">Двойной эспрессо</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Является идеальной основой для кофейных напитков</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/americano.jpg)"></div><div class="description" align="center"><div class="coffeeName">Американо</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.</div><div class="titata">Сбалансированный и насыщенный вкус является идеальным напитком для любителей кофе</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/капуч.jpg)"></div><div class="description" align="center"><div class="coffeeName">Капучино</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata">Отличается густой молочной пенкой, которая делает его нежнейшим.</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/flat.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Флэт Уайт</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>480 мл - 260 руб.</div><div class="titata">Крепче капучино раза в два. Для кофеманов с <s>крепким</s> большим сердцем</div></div></div></div>
