--- a/siropy.html
+++ b/siropy.html
@@ -15,7 +15,7 @@
 <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
 <div class="classicLogo" align="center" id="classicCof" style="margin:3% auto; width: auto;background-color:  white;box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.5);">СИРОПЫ</div>
 <div id="s" style="background-color: rgba(255, 255, 255, 0.564);">
-    <div id="simg"><img src="image/437147.jpg"></div>
+    <div id="simg"><img src="images/437147.jpg"></div>
     <div id="stext" ><div>В каждом человеке намешано всего понемножку, а жизнь выдавливает из этой смеси что-нибудь одно на поверхность</div><div align="right" style="font-size: 3vw;"> <s style="font-size: 2vw;">ауф</s><br>Стругацкие</div></div>
 </div>
 
