--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br>................
         <br>..............!!!
         <br>
-        <a href="https://www.instagram.com/nr_coffeehouse/" target="_blank"  id="insta"><img src="insta.png" style="transition: 0.5s;"></a>
+        <a href="https://www.instagram.com/nr_coffeehouse/" target="_blank"  id="insta"><img src="images/insta.png" style="transition: 0.5s;"></a>
     </div>
 </div>
 
