--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="#tea"  class="menuCoffee" style="background-image: url(images/IMG_1871.JPG)"><div class="menuCoffeeText" class="D">Чай</div></a>
 
     <a href="#avtor"   class="menuCoffee" style="background-image: url(images/DSC05407_1.JPG); " class="E"><div class="menuCoffeeText">Авторские Напитки</div></a>
-    <a href="RAF.html"   class="menuCoffee" style="background-image: url(images/DSC05407_1.JPG); " class="E"><div class="menuCoffeeText">Рафы</div></a>
+    <a href="RAF.html"   class="menuCoffee" style="background-image: url(images/37f7ad1c41588d4d75a3503840868540.jpg); " class="E"><div class="menuCoffeeText">Рафы</div></a>
   </div>
 
 
