--- a/cakes.html
+++ b/cakes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
-<body style="background-image: url(images/finca-182-_1.jpg);">
+<body style="background-image: url(images/sfkejhfjsehdyed6eded.png);">
 
 
 
