--- a/index.html
+++ b/index.html
@@ -83,12 +83,11 @@
 <div class="classic2">
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/1679375610_bogatyr-club-p-laim-na-chernom-fone-instagram-81.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мохито</div><div class="coffeeDescription" ><div>290р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/IMG_1803-scaled.jpg)"></div><div class="description" align="center"><div class="coffeeName">Клубничный мохито</div><div class="coffeeDescription"><div>290р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/240143f8bd82498ad9e63905ee58d57e.jpg)"></div><div class="description" align="center"><div class="coffeeName">Кофейный лимонад</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
-   
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/shmel.jpg)"></div><div class="description" align="center"><div class="coffeeName">Шмель</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Простота - это сила! Ощутите чистый вкус кофе, без лишних заморочек.</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/2671678.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сицилия</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Простота - это сила! Ощутите чистый вкус кофе, без лишних заморочек.</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/shop_property_file_75751_1978.jpg)"></div><div class="description" align="center"><div class="coffeeName">Кофе с тоникоМ</div><div class="coffeeDescription"></div></div></div>
-</div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/240143f8bd82498ad9e63905ee58d57e.jpg)"></div><div class="description" align="center"><div class="coffeeName">Кофейный лимонад</div><div class="coffeeDescription">480 мл - 360р</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/shmel.jpg)"></div><div class="description" align="center"><div class="coffeeName">Шмель</div><div class="coffeeDescription"><div>480 мл - 360 руб.</div><div class="titata">Кофейный напиток на основе двойного эспрессо и апельсинового сока</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/shop_property_file_75751_1978.jpg)"></div><div class="description" align="center"><div class="coffeeName">Кофе с тоникоМ</div><div class="coffeeDescription"><div></div><div class="titata">Прохладный освежающий напиток с терпким привкусом</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/2671678.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сицилия</div><div class="coffeeDescription"><div>480 мл - ??? руб.</div><div class="titata">Пряный цитрусовый кофе на основе эспрессо и тоника</div></div></div></div>
+      </div>
 
 
 
