--- a/siropy.html
+++ b/siropy.html
@@ -154,7 +154,7 @@
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/fu6f0d25j0enrig5wev9w07oveze71x2.png)"></div><div class="description2" align="center"><div class="coffeeName2">Жасмин</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/09m74z09h3rwoub2b6hifkktlapfks80.png)"></div><div class="description2" align="center"><div class="coffeeName2">Гвоздика</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/g1k6tmekw1zs7g7wlkhcwh8i838q2j75.png)"></div><div class="description2" align="center"><div class="coffeeName2">Роза</div></div></div>
-    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/lx638en9wi30dvbk3vpo0ocazatdduwo.png)"></div><div class="description2" align="center"><div class="coffeeName2" style="width: 100%;">Можжевельник</div></div></div>
+    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/lx638en9wi30dvbk3vpo0ocazatdduwo.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Можжевельник</div></div></div>
 
   </div>
 <br>
