--- a/siropy.html
+++ b/siropy.html
@@ -115,10 +115,10 @@
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/mo1tjqqawg4vpub7d6pqvl9nhu2fxs8l.png)"></div><div class="description2" align="center"><div class="coffeeName2">Персик</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/xfoc5ti4puhc2n753fo9p4w4ervhrpig.png)"></div><div class="description2" align="center"><div class="coffeeName2">Манго</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/fc541hh41bl7ihtmgz01voy4o8x9umr3.png)"></div><div class="description2" align="center"><div class="coffeeName2">Гранат</div></div></div>
-  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/4u3a08pv58043vbi1qoa2oxz1nmud6ow.png)"></div><div class="description2" align="center"><div class="coffeeName2">Зелёная дыня</div></div></div>
+  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/4u3a08pv58043vbi1qoa2oxz1nmud6ow.png)"></div><div class="description2" align="center"><div class="coffeeName2">Дыня</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/lseb4ppcf1gt9358jqal7rrsq73xbuhh.png)"></div><div class="description2" align="center"><div class="coffeeName2">Маракуйа</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/8c4lox1fzveftujlzh3n6e0my2sryf4o.png)"></div><div class="description2" align="center"><div class="coffeeName2">Киви</div></div></div>
-  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/z1c5q0tmgu5goktt72hzwkkksigiw05l.png)"></div><div class="description2" align="center"><div class="coffeeName2">Зелёный банан</div></div></div>
+  <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/z1c5q0tmgu5goktt72hzwkkksigiw05l.png)"></div><div class="description2" align="center"><div class="coffeeName2">Банан</div></div></div>
 
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/1e6zw3cn87g5ft6py6r7p9q3ve38irrn.png)"></div><div class="description2" align="center"><div class="coffeeName2">Личи</div></div></div>
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/26jo5at24rt8y4c167qmi4s7ne0f1pf4.png)"></div><div class="description2" align="center"><div class="coffeeName2">Каштан</div></div></div>
