--- a/cakes.html
+++ b/cakes.html
@@ -14,7 +14,7 @@
 
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
     <div class="classicLogo" align="center" id="classicCof" style="margin:5% auto; width: auto;background-color:  white;box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.5)">ДЕСЕРТЫ</div>
-<div class="classicCake" >       
+<div class="classicCake" style="background-color: rgba(255, 255, 255, 0.564)">       
         <div class="classicCard"><div class="imgCake" style="background-image: url(images/pirozhnoe-sitsilijskaya-kanolo-2-1.jpg)"></div><div class="descriptionC" align="center"><div class="coffeeName">Сицилийская канноли</div><div class="coffeeDescription">280р</div></div></div>
         <div class="classicCard"><div class="imgCake" style="background-image: url(images/Tort_Yagodnyj_miks_s_maskarpone_1610_kg_14_porcz4_DF-0.jpg);"></div><div class="description" align="center"><div class="coffeeName">Микс маскарпоне с ягодами</div><div class="coffeeDescription"><div>240р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCake" style="background-image: url(images/chizkejk_klubnichnyj_1_56_kg.jpg)"></div><div class="description" align="center"><div class="coffeeName">Клубничный чизкейк</div><div class="coffeeDescription"><div>240р</div><div class="titata"></div></div></div></div>
