--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body >
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, кофейня, октябрьский, люберцы, кофе, кофехаус, на вынос" />
-   
+  <meta name="description" content="Кофейни в Октябрьском с адресами, телефонами, отзывами. Карты покажут режим работы, панорамы и фото места, помогут добраться общественным транспортом, пешком или на машине. В нашей кофейне Вы можете порадовать себя ароматным, свежеприготовленным кофе с собой. А мы докажем что качественный кофе не должен быть дорогим.">
+  
   
   
   
