--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body >
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, кофейня, октябрьский, люберцы, кофе, кофехаус, на вынос" />
-  <meta name="description" content="Кофейни в Октябрьском с адресами, телефонами, отзывами. Карты покажут режим работы, панорамы и фото места, помогут добраться общественным транспортом, пешком или на машине. В нашей кофейне Вы можете порадовать себя ароматным, свежеприготовленным кофе с собой. А мы докажем что качественный кофе не должен быть дорогим.">
   
   
   
@@ -37,7 +36,7 @@
         <a href="https://www.instagram.com/nr_coffeehouse/" target="_blank"  id="insta"><img src="images/insta.png" style="transition: 0.5s;"></a>
     </div>
 </div>
-
+<div style="width:560px;height:800px;overflow:hidden;position:relative;"><iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/143957270195?comments"></iframe><a href="https://yandex.ru/maps/org/kofeynya/143957270195/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Кофейня на карте Москвы и Московской области — Яндекс Карты</a></div>
 <div id="c" >
 
         <a href="#classicCof" class="menuCoffee" style="background-image: url(images/scale_1200.jpg); " class="A"><div class="menuCoffeeText">Классика</div></a>
