--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 </head>
 <body >
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, кофейня, октябрьский, люберцы, кофе, кофехаус, на вынос" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   
   
   
