--- a/RAF.html
+++ b/RAF.html
@@ -13,7 +13,7 @@
 
 
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
-    <div class="classicLogo" align="center">РАФЫ</div>
+    <div class="classicLogo" align="center" style="margin:3% auto; width: auto;background-color:  white;box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.5);">РАФЫ</div>
 <div class="classic4">
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Классический</div><div class="coffeeDescription"><div>380 мл - 270р<br>480 мл - 310р</div><div class="titata">Кофе, который знает, как угодить. Сливки, ваниль и любовь - идеальное трио!</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/5035893.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Лавандовый</div><div class="coffeeDescription"><div>290р</div><div class="titata">Раф, который хочет отдохнуть от суеты и поплавать в лавандовой ванне. Ароматный, спокойный, как вечер в прованском поле.</div></div></div></div>
