--- a/cakes.html
+++ b/cakes.html
@@ -37,7 +37,7 @@
         <div class="classicCard"><div class="imgCake" style="background-image: url(images/ponchik-s-rozovoj-glazuryu-i-posypkoj-iz-belogo-shokolada-320x320.jpg)"></div><div class="descriptionC" align="center"><div class="coffeeName">Пончик с панакотой</div><div class="coffeeDescription"><p><br>110 руб.<br><br>Раф, который хочет почувствовать себя на курорте. Летний, свежий и сладкий.</p></div></div></div>
         <!-- <div class="classicCard"><div class="imgCake" style="background-image: url(images/ponchik-s-malinovoj-nachinkoj-konditerskoj-rozovoj-glazuryu-1.jpg)"></div><div class="descriptionC" align="center"><div class="coffeeName">Пончик с малиной</div><div class="coffeeDescription"><div>110 руб.</div><div class="titata">Взрывной дуэт,,, Этот пончик станет настоящим хитом в компании чашечки кофе</div></div></div></div> -->
 
-        <div class="classicCard"><div class="imgCake" style="background-image: url(images/5f8c5eb36c6157.45694223.jpg)"></div><div class="descriptionC" align="center"><div class="coffeeName">Сэндвич курицей</div><div class="coffeeDescription"><div>180 руб.</div><div class="titata"></div></div></div></div>
+        <!-- <div class="classicCard"><div class="imgCake" style="background-image: url(images/5f8c5eb36c6157.45694223.jpg)"></div><div class="descriptionC" align="center"><div class="coffeeName">Сэндвич курицей</div><div class="coffeeDescription"><div>180 руб.</div><div class="titata"></div></div></div></div> -->
         <div class="classicCard"><div class="imgCake" style="background-image: url(images/CrpiopDihv0.jpg)"></div><div class="descriptionC" align="center"><div class="coffeeName">Твистер с курицей</div><div class="coffeeDescription"><div>180 руб.</div><div class="titata"></div></div></div></div>
 
 
