--- a/RAF.html
+++ b/RAF.html
@@ -14,7 +14,7 @@
 
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
     <div class="classicLogo" align="center" style="margin:3% auto; width: auto;background-color:  white;box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.5);">РАФЫ</div>
-<div class="classic4">
+<div class="classic4" style="background-color: rgba(255, 255, 255, 0.564);">
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Классический</div><div class="coffeeDescription"><div>380 мл - 270р<br>480 мл - 310р</div><div class="titata">Кофе, который знает, как угодить. Сливки, ваниль и любовь - идеальное трио</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/5035893.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Лавандовый</div><div class="coffeeDescription"><div>380 мл - 31<br>480 мл - 350р</div><div class="titata">Ароматный, спокойный, как вечер в прованском поле.</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(images/eaa6458c3c191beca20a1b5a3ab2de0c.png)"></div><div class="description" align="center"><div class="coffeeName">Апельсиновый</div><div class="coffeeDescription"><div>380 мл - 31<br>480 мл - 350р</div><div class="titata">Раф с цитрусовой кислинкой</div></div></div></div>
