--- a/milk.html
+++ b/milk.html
@@ -9,9 +9,17 @@
 <body>
     
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
-    <div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;font-size: 4vw;">МОЛОКО</div>
+    <div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;font-size: 4vw;">Альтернативное молоко</div>
 
-<div class="classic" style="background-color: rgba(0, 0, 0, 0.436);">
+  <div class="Moloko">
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/1b5pw35lw3tp961r67h3efkqbdjyp3jy.png)"></div><div class="description2" align="center"><div class="coffeeName2">Лаванда</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/fu6f0d25j0enrig5wev9w07oveze71x2.png)"></div><div class="description2" align="center"><div class="coffeeName2">Жасмин</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/09m74z09h3rwoub2b6hifkktlapfks80.png)"></div><div class="description2" align="center"><div class="coffeeName2">Гвоздика</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/g1k6tmekw1zs7g7wlkhcwh8i838q2j75.png)"></div><div class="description2" align="center"><div class="coffeeName2">Роза</div></div></div>
+    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/lx638en9wi30dvbk3vpo0ocazatdduwo.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Можжевельник</div></div></div>
+
+  </div>
+<!-- <div class="classic" style="background-color: rgba(0, 0, 0, 0.436);">
         <div class="classicCard" ><div class="imgCoffee" style="height:100%;background-image: url(soya.png)" data-proportion-h="1"></div><div class="description" align="center"><div class="coffeeName" style>Соевое</div></div></div>
         <div class="classicCard" ><div class="imgCoffee" style="background-image: url(coconut.png)"></div><div class="description" align="center"><div class="coffeeName">Кокосовое</div></div></div>
         <div class="classicCard" ><div class="imgCoffee" style="background-image: url(almond.png)"></div><div class="description" align="center"><div class="coffeeName">Миндальное</div></div></div>
@@ -19,7 +27,7 @@
         <div class="classicCard" ><div class="imgCoffee" style="background-image: url(hazelnut.png)"></div><div class="description" align="center"><div class="coffeeName">Фундучное</div></div></div>
         <div class="classicCard" ><div class="imgCoffee" style="background-image: url(banana.png)"></div><div class="description" align="center"><div class="coffeeName">Банановое</div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(Green_Milk_STAWBERRY.png)"></div><div class="description" align="center" style="margin:0;height:auto"><div class="coffeeName" style="height:10%">Клубничное</div></div></div>
-</div>
+</div> -->
 
 </body>
 </html>
