--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="aslogan">Осторожно,<br>вызываем зависимость </div>
         <div id="shapka" >
             <a href="index.html#c" class="button" class="shapkaButton">Напитки разные</a>
-            <a href="https://www.youtube.com/watch?v=HIcSWuKMwOw" target="_blank" class="button" class="shapkaButton">Молоко</a>
+            <a href="milk.html" target="_blank" class="button" class="shapkaButton">Молоко</a>
             <a href="siropy.html" target="_blank" class="button" class="shapkaButton">Сиропы</a>
             <a href="cakes.html" target="_blank" class="button" class="shapkaButton">Десерты</a>
         </div>
