--- a/milk.html
+++ b/milk.html
@@ -11,12 +11,12 @@
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
     <div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;font-size: 4vw;">Альтернативное молоко</div>
 
-  <div class="Moloko">
-    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/1b5pw35lw3tp961r67h3efkqbdjyp3jy.png)"></div><div class="description2" align="center"><div class="coffeeName2">Лаванда</div></div></div>
-    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/fu6f0d25j0enrig5wev9w07oveze71x2.png)"></div><div class="description2" align="center"><div class="coffeeName2">Жасмин</div></div></div>
-    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/09m74z09h3rwoub2b6hifkktlapfks80.png)"></div><div class="description2" align="center"><div class="coffeeName2">Гвоздика</div></div></div>
-    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/g1k6tmekw1zs7g7wlkhcwh8i838q2j75.png)"></div><div class="description2" align="center"><div class="coffeeName2">Роза</div></div></div>
-    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/lx638en9wi30dvbk3vpo0ocazatdduwo.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Можжевельник</div></div></div>
+  <div class="Moloko">    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/soya.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Соевое</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/coconut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кокосовое</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/almond.png)"></div><div class="description2" align="center"><div class="coffeeName2">Миндальное</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/hazelnut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Фундучное</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/banana.png)"></div><div class="description2" align="center"><div class="coffeeName2">Банановое</div></div></div>
+    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/Green_Milk_STAWBERRY.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Клубничное</div></div></div>
 
   </div>
 <!-- <div class="classic" style="background-color: rgba(0, 0, 0, 0.436);">
