--- a/milk.html
+++ b/milk.html
@@ -6,7 +6,7 @@
     <title>Молоко</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background-image: url(images/f24046c97b1caa3460c5bb74aa6e2889.jpg);">
     
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
     <div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;font-size: 4vw;">Альтернативное молоко</div>
