--- a/milk.html
+++ b/milk.html
@@ -11,12 +11,12 @@
     <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
     <div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;font-size: 4vw;">Альтернативное молоко</div>
 
-  <div class="Moloko">    <div class="SiropCard"><div class="imgMoloko" style="background-image: url(images/soya.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Соевое</div></div></div>
-    <div class="SiropCard" ><div class="imgMoloko" style="background-image: url(images/coconut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кокосовое</div></div></div>
-    <div class="SiropCard" ><div class="imgMoloko" style="background-image: url(images/almond.png)"></div><div class="description2" align="center"><div class="coffeeName2">Миндальное</div></div></div>
-    <div class="SiropCard" ><div class="imgMoloko" style="background-image: url(images/hazelnut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Фундучное</div></div></div>
-    <div class="SiropCard" ><div class="imgMoloko" style="background-image: url(images/banana.png)"></div><div class="description2" align="center"><div class="coffeeName2">Банановое</div></div></div>
-    <div class="SiropCard"><div class="imgMoloko" style="background-image: url(images/Green_Milk_STAWBERRY.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Клубничное</div></div></div>
+  <div class="Moloko">    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/soya.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Соевое</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/coconut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Кокосовое</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/almond.png)"></div><div class="description2" align="center"><div class="coffeeName2">Миндальное</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/hazelnut.png)"></div><div class="description2" align="center"><div class="coffeeName2">Фундучное</div></div></div>
+    <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(images/banana.png)"></div><div class="description2" align="center"><div class="coffeeName2">Банановое</div></div></div>
+    <div class="SiropCard"><div class="imgCoffee2" style="background-image: url(images/Green_Milk_STAWBERRY.png)"></div><div class="description2" align="center"><div class="coffeeName2" >Клубничное</div></div></div>
 
   </div>
   <br>
